# default_attrgetter

./: README.md  default_attrgetter.py  pyproject.toml  test_default_attrgetter.py
