[tool.poetry]
name = "default-attrgetter"
version = "0.1.0"
description = ""
authors = ["simonwardjones <simon.ward-jones@deliveroo.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
